# my_project

core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
