[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
hex = "0.4.3"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
